added colour swatch, fixed buttons

--- a/p5/trees/index.html
+++ b/p5/trees/index.html
@@ -20,6 +20,14 @@
 		font-family: Arial;
 		color: white;
 	}
+
+	.buttons {
+		padding-top: 20px;
+	}
+
+	button {
+		margin: 2px;
+	}
 	</style>
 </head>
 
